# new_androserum

./: .env.example  .gitignore  PROJECT_HANDOFF.md  README.md  pyproject.toml
configs/: lamda_binary_eval_240_candidates.csv  lamda_binary_eval_240_candidates.summary.json  lamda_test_40.csv  lamda_train_160.csv  lamda_train_val_test.summary.json  lamda_val_40.csv  sha_dev_10_random.txt  sha_dev_200.txt  train_contrastive_ab.yaml  train_gnn_bgrl.yaml  train_gnn_bgrl_relay.yaml  train_gnn_bgrl_relay_package.yaml
configs/lamda_dryrun/: lamda_dryrun.summary.json  lamda_test_dryrun.csv  lamda_train_dryrun.csv  lamda_val_dryrun.csv
scripts/: 00_download_apks.py  01_disassemble_apks.py  02_extract_methods.py  02b_tag_susi.py  02c_extract_overrides.py  02d_extract_library_keys.py  03_encode_methods.py  04_train_contrastive.py  04b_export_finetuned_embeddings.py  05_compare_baseline_finetuned.py  05_extract_fcg.py  06_train_gnn.py  06b_export_gnn_embeddings.py  07_cluster_single_apk.py  08_discover_behavior_anchors.py  08b_extract_behavior_clues.py  08c_batch_extract_behavior_clues.py  09_batch_discover_behavior_anchors.py  10_grow_behavior_unit.py  10b_grow_representative_behavior_units.py  10c_batch_grow_behavior_units.py  11_sweep_behavior_growth.py  12_sample_lamda_binary_eval.py  13_download_lamda240_local.sh  13b_download_lamda240_windows.ps1  13c_import_lamda240_from_windows.sh  14_prepare_lamda240_local.sh  14b_prepare_lamda240_local_no_download.sh  15_split_lamda_binary_eval.py  16_make_lamda_dryrun_subset.py  17_new_device_lamda240_bootstrap.sh  cloud_lamda_pull.sh  cloud_lamda_push.sh  cloud_lamda_run.sh  cloud_lamda_start.sh  cloud_lamda_status.sh  cloud_lamda_train_only.sh  cloud_lamda_train_push.sh  cloud_lamda_train_start.sh  cloud_phase4_pull.sh  (+5 more)
src/androserum/: __init__.py
src/androserum/behavior/: __init__.py  anchors.py  clues.py  growth.py  schema.py
src/androserum/cluster/: __init__.py
src/androserum/data/: __init__.py  androzoo.py  apk_processor.py  library_index.py  method_extractor.py  method_parquet.py  override_index.py  (+3 more)
tests/: test_encoder_load.py  test_fcg_extract.py  test_gnn_dataset.py  test_method_extractor.py  test_method_parquet.py  test_phase4_ab.py  test_schema.py  test_susi_index.py
(+23 files in other folders)
